samples/_failures_safe/1761290096_97fcf2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1bb8f06.c: In function ‘main’:
./samples/SAFE/__tmp_e1bb8f06.c:170:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  170 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_e1bb8f06.c:170:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e1bb8f06.c:170:9: error: expected ‘;’ at end of input
  170 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_e1bb8f06.c:170:5: error: expected declaration or statement at end of input
  170 |     size
      |     ^~~~
